style.css
/* ... */
.rs-banner.main-home .content-wrap .border-line {
    background-color: #fff;
    color: #ffffff;
    width: 70px;
    height: 8px;
    margin-bottom: 28px;
}

.rs-banner.main-home .content-wrap .sub-title {
    font-size: 28px;
    line-height: 40px;
    font-weight: 700;
    color: #ffffff;
    margin: 0px 0px 47px 0px;
}

@media only screen and (max-width: 767px) {
    .rs-banner.main-home .content-wrap .sub-title {
        font-size: 20px;
        line-height: 30px;
    }
}

@media only screen and (max-width: 480px) {
    .rs-banner.main-home .content-wrap .sub-title {
        font-size: 18px;
        line-height: 30px;
        margin: 0px 0px 40px 0px;
    }
}

.rs-banner.main-home a {
    color: #ffffff;
    background-color: #bb0b0b;
    padding:15px 25px 15px 25px;
    font-size: 17px;
    font-weight: bold;
}


/* -----------about---------------- */

.pt-110 {
    padding-top: 110px;
}

.pb-110 {
    padding-bottom: 110px;
}

@media only screen and (max-width: 991px) {
    .md-pt-70 {
        padding-top: 70px;
    }
}

@media only screen and (max-width: 991px) {
    .md-pb-65 {
        padding-bottom: 65px;
    }
}

.bg1 {
    background: url(https://gvtechsolution.com/assets/images/bg/about-bg.png);
    background-position: top center;
    background-repeat: no-repeat;
    background-size: cover;
}

.rs-about .container {
    width: 100%;
    padding-right: var(--bs-gutter-x, .75rem);
    padding-left: var(--bs-gutter-x, .75rem);
    margin-right: auto;
    margin-left: auto;
}

@media (min-width: 576px) {
    .rs-about .container {
        max-width: 540px;
    }
}

@media (min-width: 768px) {
    .rs-about .container {
        max-width: 720px;
    }
}

@media (min-width: 992px) {
    .rs-about .container {
        max-width: 960px;
    }
}

@media (min-width: 1200px) {
    .rs-about .container {
        max-width: 1240px;
    }
}


.rs-about .container .row {
    --bs-gutter-x: 1.5rem;
    --bs-gutter-y: 0;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-content: normal;
    justify-content: normal;
    align-items: center;
    margin-top: calc(var(--bs-gutter-y) * -1);
    margin-right: calc(var(--bs-gutter-x) * -.5);
    margin-left: calc(var(--bs-gutter-x) * -.5);
}

.rs-about .container .y-middle {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    flex-direction: row;
    align-content: normal;
    justify-content: normal;
    -webkit-align-items: center;
    align-items: center;
}

.rs-about .container .row>* {
    flex-shrink: 0;
    width: 100%;
    max-width: 100%;
    padding-right: calc(var(--bs-gutter-x) * .5);
    padding-left: calc(var(--bs-gutter-x) * .5);
    margin-top: var(--bs-gutter-y);
}

@media only screen and (max-width: 991px) {
    .rs-about .container .row .md-mb-50 {
        margin-bottom: 50px;
    }
}

@media (min-width: 992px) {
    .rs-about .container .row .col-lg-6 {
        flex: 0 0 auto;
        width: 50%;
    }
}

.rs-about .container .row .pl-60 {
    padding-left: 60px;
}

@media only screen and (max-width: 991px) {
    .rs-about .container .row .md-pl-15 {
        padding-left: 15px;
    }
}

@media only screen and (max-width: 991px) {
    .rs-about .container .row .md-pl-15 {
        padding-left: 15px;
    }
}

.rs-about.main-home .images-part {
    border-top-right-radius: 40px;
    overflow: hidden;
    border-bottom-right-radius: 40px;
}

.pb-30 {
    padding-bottom: 30px;
}

.sec-title .title {
    font-size: 36px;
    line-height: 46px;
    font-weight: 700;
    color: #0a0a0a;
    margin: 0;
    position: relative;
    padding-top: 28px;
}

@media only screen and (max-width: 767px) {
    .rs-my-account .title, .sec-title3 .title, .sec-title .title.title3, .sec-title2 .title, .sec-title .title {
        font-size: 26px;
        line-height: 36px;
    }
}

.sec-title .title:after {
    content: '';
    position: absolute;
    border: 0;
    width: 65px;
    height: 5px;
    background: #bb0b0b;
    z-index: 1;
    margin-left: 0;
    left: 0;
    top: 0;
}

.sub-text {
    font-weight: 600;
    margin: 0 0 10px;
    display: inline-block;
    color: #bb0b0b;
    line-height: 28px;
    font-size: 15px;
    text-transform: uppercase;
}

.sec-title .sub-text {
    font-size: 15px;
    line-height: 28px;
    font-weight: 600;
    color: #191821;
    margin: 0 0 10px;
    text-transform: capitalize;
    display: block;
}

.margin-0 {
    margin: 0;
}

.mt-45 {
    margin-top: 45px;
}

.readon {
    color: #fff;
    font-size: 17px;
    line-height: 26px;
    font-weight: 600;
    text-transform: capitalize;
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: all 0.4s;
    z-index: 1;
    background-color: transparent;
}

.readon.consultant {
    padding: 18px 35px 18px 35px;
    border-radius: 0px 0px 0px 0px;
    color: #fff;
    background: #bb0b0b;
    overflow: hidden;
    position: relative;
}

@media only screen and (max-width: 991px) {
    .readon.consultant {
        padding: 16px 28px 16px 28px;
        font-size: 15px;
    }
}

.readon.consultant.discover {
    padding: 15px 40px 15px 40px;
}

.readon.consultant:after {
    content: '';
    position: absolute;
    top: 10px;
    left: 0;
    width: 300px;
    height: 200px;
    background-color: #333;
    border-color: transparent;
    border-radius: 50%;
    transform: translate(-40px, -80px) scale(0.1);
    opacity: 0;
    z-index: -1;
    transition: transform 0.5s, opacity 0.5s, background-color 0.5s;
}


/* ------------services----------------  */

.services {
  padding: 100px 100px;
  background: url("https://www.gvtechsolution.com/assets/images/bg/ser-bg.png") no-repeat center center;
  background-size: cover;
  padding-bottom: 100px;
  padding-top: 100px;
  box-sizing: border-box;
  display: block;
  position: relative;
}

@media (min-width: 576px) {
    .services .container {
        max-width: 540px;
    }
}
/* ... */

